fix aparelhos eletronicos layout

--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -796,85 +796,77 @@
                         <md-tab-body>
                             <form name="wizardStep10" ms-form-wizard-form novalidate>
 
-                                <div layout="column" layout-gt-xs="row">
+                              <h3>Quais são os aparelhos que o aluno tem em casa?</h3>
 
-                                    Quais são os aparelhos que o aluno possui em casa?
-
-                                </div>
-
-                                <br>
-                                <br>
-
-
-                                <div layout="column" layout-gt-xs="row">
-                                    <div flex="100" flex-gt-sm="50">
+                                <div layout="column" layout-gt-xs="row" layout-margin layout-align="space-around none" style="height: 100vh, width: 100vh">
+                                    <div flex="100" flex-gt-xs="20">
                                         Televisão
                                         <md-checkbox ng-model="vm.data.aparelhosEletronicos.televisao" aria-label="Televisão">
                                         </md-checkbox>
                                     </div>
 
-                                    <div flex="100" flex-gt-sm="50">
-                                        TV por assinatura
+                                    <div flex="100" flex-gt-xs="20">
+                                        TV por assinatura/Internet
                                         <md-checkbox ng-model="vm.data.aparelhosEletronicos.tvAssinatura" aria-label="TV por assinatura">
                                         </md-checkbox>
                                     </div>
 
-                                    <div flex="100" flex-gt-sm="50">
+                                    <div flex="100" flex-gt-xs="20">
                                         Computador
                                         <md-checkbox ng-model="vm.data.aparelhosEletronicos.computador" aria-label="Computador">
                                         </md-checkbox>
                                     </div>
                                 </div>
 
-                                <div layout="column" layout-gt-xs="row">
-                                    <div flex="100" flex-gt-sm="50">
+                                <div layout="column" layout-gt-xs="row" layout-margin layout-align="space-around none" style="height: 100vh, width: 100vh">
+                                    <div flex="100" flex-gt-xs="20">
                                         Notebook
                                         <md-checkbox ng-model="vm.data.aparelhosEletronicos.notebook" aria-label="Notebook">
                                         </md-checkbox>
                                     </div>
 
-                                    <div flex="100" flex-gt-sm="50">
+                                    <div flex="100" flex-gt-xs="20">
                                         Fogão
                                         <md-checkbox ng-model="vm.data.aparelhosEletronicos.fogao" aria-label="Fogão">
                                         </md-checkbox>
                                     </div>
 
-                                    <div flex="100" flex-gt-sm="50">
+                                    <div flex="100" flex-gt-xs="20">
                                         Geladeira
                                         <md-checkbox ng-model="vm.data.aparelhosEletronicos.geladeira" aria-label="Geladeira">
                                         </md-checkbox>
                                     </div>
                                 </div>
 
-                                <div layout="column" layout-gt-xs="row">
-                                    <div flex="100" flex-gt-sm="50">
+                                <div layout="column" layout-gt-xs="row" layout-margin layout-align="space-around none" style="height: 100vh, width: 100vh">
+                                    <div flex="100" flex-gt-xs="20">
                                         Microondas
                                         <md-checkbox ng-model="vm.data.aparelhosEletronicos.microondas" aria-label="Microondas">
                                         </md-checkbox>
                                     </div>
 
-                                    <div flex="100" flex-gt-sm="50">
+                                    <div flex="100" flex-gt-xs="20">
                                         Máquina de lavar
                                         <md-checkbox ng-model="vm.data.aparelhosEletronicos.maquinaLavar" aria-label="Máquina de lavar">
                                         </md-checkbox>
                                     </div>
 
-                                    <div flex="100" flex-gt-sm="50">
+                                    <div flex="100" flex-gt-xs="20">
                                         Máquina de secar
                                         <md-checkbox ng-model="vm.data.aparelhosEletronicos.maquinaSecar" aria-label="Máquina de secar">
                                         </md-checkbox>
                                     </div>
                                 </div>
 
-                                <div layout="row" layout-gt-xs="row">
+                                <div layout="column" layout-gt-xs="row" layout-margin layout-align="space-around none" style="height: 100vh, width: 100vh">
 
-                                    <div flex="100" flex-gt-sm="33">
+                                    <div flex="100" flex-gt-xs="35">
                                         Telefone fixo
                                         <md-checkbox ng-model="vm.data.aparelhosEletronicos.telefoneFixo" aria-label="Telefone fixo">
                                         </md-checkbox>
                                     </div>
 
-                                    <div flex="100" flex-gt-sm="35">
+                                    <div flex="100" flex-gt-xs="20">
                                         Celular
                                         <md-checkbox ng-model="vm.data.aparelhosEletronicos.celular" aria-label="Celular">
                                         </md-checkbox>
