changed observacoes div from input text to text area

--- a/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/dialogs/aluno/aluno-dialog.html
@@ -984,7 +984,7 @@
 
                                 <div layout="column" layout-gt-xs="row">
                                     <md-input-container flex="100">
-                                        <input type="text" name="observacoes" ng-model="vm.data.aluno.observacoes" placeholder="Observações">
+                                        <textarea rows="5" name="observacoes" ng-model="vm.data.aluno.observacoes" placeholder="Digite aqui suas observações sobre o aluno"></textarea>
                                     </md-input-container>
                                 </div>
 
