--- a/frontend/src/main/frontend/src/app/main/aluno/aluno.html
+++ b/frontend/src/main/frontend/src/app/main/aluno/aluno.html
@@ -174,6 +174,12 @@
 
                     </div>
 
+                    <div class="atributos" layout-align="space-around end">
+                      <label class="ralabel">RA</label>
+                      <label>Nome</label>
+                      <label>Nascimento</label>
+                    </div>
+
                 </md-subheader>
                 <!-- / CONTACT LIST HEADER -->
 
