changed turmas icon

--- a/frontend/src/main/frontend/src/app/main/turma/turma.html
+++ b/frontend/src/main/frontend/src/app/main/turma/turma.html
@@ -4,7 +4,7 @@
 
       <div class="logo" layout="row" layout-align="start center">
         <span class="logo-icon">
-          <md-icon md-font-icon="icon-account-box" class="s24"></md-icon>
+          <md-icon md-font-icon="icon-people" class="s24"></md-icon>
         </span>
         <span class="logo-text">Turmas</span>
       </div>
