changed cpf icon

--- a/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
@@ -15,7 +15,7 @@
       <div layout="column" layout-gt-xs="row">
         <md-input-container class="md-icon-float md-block" flex="100" flex-gt-xs="30">
           <label>Cpf do Educador</label>
-          <md-icon md-font-icon="">reorder</md-icon>
+          <md-icon md-font-icon="icon-account-circle"></md-icon>
           <input ng-model="vm.turma.cpfEducador" type="text" mask="999.999.999-99" ng-disabled="!vm.newTurma" required>
         </md-input-container>
 
