space between in dialog gerenciar turmas

--- a/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
+++ b/frontend/src/main/frontend/src/app/main/turma/dialogs/turma/turma-dialog.html
@@ -12,14 +12,14 @@
 
     <md-dialog-content ms-scroll>
 
-      <div layout="column" layout-gt-xs="row">
-        <md-input-container class="md-icon-float md-block" flex="100" flex-gt-xs="30">
+      <div layout="column" layout-gt-xs="row" layout-margin layout-align="space-around none" style="height: 100vh, width: 100vh">
+        <md-input-container class="md-icon-float md-block" flex="100" flex-gt-xs="20">
           <label>Cpf do Educador</label>
           <md-icon md-font-icon="icon-account-circle"></md-icon>
           <input ng-model="vm.turma.cpfEducador" type="text" mask="999.999.999-99" ng-disabled="!vm.newTurma" required>
         </md-input-container>
 
-        <md-input-container class="md-icon-float md-block" flex="100" flex-gt-xs="20">
+        <md-input-container class="md-icon-float md-block" flex="100" flex-gt-xs="15">
           <label>Período</label>
           <md-icon md-font-icon="icon-clock"></md-icon>
           <md-select ng-model="vm.turma.periodo" required>
@@ -29,13 +29,13 @@
           </md-select>
         </md-input-container>
 
-        <md-input-container flex="100" flex-gt-xs="50">
+        <md-input-container flex="100" flex-gt-xs="30">
           <md-icon md-font-icon="icon-clipboard-text"></md-icon>
-          <input type="text" name="nome" ng-model="vm.turma.nome" placeholder="Nome">
+          <input type="text" name="nome" ng-model="vm.turma.account" placeholder="Nome da Turma">
         </md-input-container>
       </div>
 
-      <p><b>Alunos dentro da Turma:</b></p>
+      <h3>Alunos dentro da Turma:</h3>
       <md-list-item class="aluno-item md-white-bg"  ng-repeat="a in vm.alunosDentroTurma">
         <div class="item" layout="row">
           <p class="show-gt-xs numero">
@@ -51,7 +51,7 @@
         </div>
       </md-list-item>
 
-      <p><b>Alunos fora da Turma:</b></p>
+      <h3>Alunos fora da Turma:</h3>
       <md-list-item class="aluno-item md-white-bg" ng-repeat="a in vm.alunosForaTurma track by a.aluno.ra">
         <div class="item" layout="row">
           <p class="show-gt-xs numero">
