--- a/frontend/src/main/frontend/src/app/main/turma/turma.html
+++ b/frontend/src/main/frontend/src/app/main/turma/turma.html
@@ -138,6 +138,10 @@
             {{turma.nome}}
           </p>
 
+          <p class="ride show-gt-sm texto periodoTurma">
+            {{turma.periodo}}
+          </p>
+
           <p class="hide show-gt-sm texto cpfEducador">
             {{turma.cpfEducador}}
           </p>
