Add logo in login screen

--- a/frontend/src/main/frontend/src/app/main/login/login.html
+++ b/frontend/src/main/frontend/src/app/main/login/login.html
@@ -1,10 +1,10 @@
 <div id="login" class="flex-scrollable" layout="column" ms-scroll>
     <div id="login-form-wrapper" layout="column" layout-align="center center">
         <div id="login-form" class="md-whiteframe-8dp">
-            <div class="logo md-accent-bg">
-                <span>E</span>
+            <div class="">
+                <img src="../../../assets/logos/ebm_110.png" alt="Educandario Bezerra de Menezes">
+                <!-- <span>E</span> -->
             </div>
-
             <div class="title">Faça o Login na sua conta</div>
 
             <form name="loginForm" novalidate>
