Set color icons to black

--- a/frontend/src/main/frontend/src/app/main/historicoOcorrencia/dialogs/historicoOcorrencia/historicoOcorrencia-lista-dialog.scss
+++ b/frontend/src/main/frontend/src/app/main/historicoOcorrencia/dialogs/historicoOcorrencia/historicoOcorrencia-lista-dialog.scss
@@ -1,27 +1,34 @@
 md-dialog {
-    
     &.ocorrencia-dialog {
-        
         width: 800px;
         height: 400px;
-
         .title {
             font-size: 20px;
         }
-    
-        div.item p.date{
+        div.item p.date {
             width: 100px;
             text-align: left;
         }
-
         div.item p.numero {
             width: 100px;
             text-align: left;
         }
-
-        div.item p.texto{
+        div.item p.texto {
             width: 220px;
             text-align: left;
         }
+        p.header {
+            margin-right: 70px;
+        }
+        .titleHeader {
+            margin-bottom: 20px;
+        }
+        .search {
+            margin-top: 22px;
+        }
+        md-icon {
+            color: #000;
+            // background-color: #000;
+        }
     }
-}   
+}
