--- a/frontend/src/main/frontend/src/app/main/historicoOcorrencia/historicoOcorrencia.scss
+++ b/frontend/src/main/frontend/src/app/main/historicoOcorrencia/historicoOcorrencia.scss
@@ -224,6 +224,11 @@
         white-space: nowrap;
     }
 
+    md-icon {
+        color: #000;
+        // background-color: #000;
+    }
+
 }
 
 // RESPONSIVE
